# snowball

./: .env.example  .gitignore  .gitmodules  CONTRACT_FIX_PLAN.md  DEMO_SCENARIO.md  FIXES_APPLIED.md  LAST_TASK.md  Makefile  OP.md  README.md  SECURITY_PATCH_NOTES.md  SECURITY_REMEDIATION.md  audit_report_v2.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.serena/: project.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/common/: gas_manager.py  web3_client.py
backend/app/options/: eip712.py  relayer.py  router.py  schemas.py  settlement.py
backend/app/oracle/: contracts.py  service.py  sources.py
backend/app/price/: cache.py  router.py  websocket.py
deployments/: addresses.json
deployments/creditcoin-testnet/: algebra.json  erc8004.json  liquity.json  morpho.json  options.json  oracle.json  usc-bridge.json  yield.json
docs/: DEPLOY_ADDRESSES_UPDATE.md  DESIGN_TOKENOMICS_V2.md  FRONTEND_HANDOFF.md  FRONTEND_PROMPT.md  FRONTEND_VERSION_MIGRATION.md  INDEX.md  OPERATIONS.md  PROJECT_OVERVIEW.md  SSOT_ALGEBRA.md  SSOT_ERC8004.md  SSOT_LIQUITY.md  SSOT_MORPHO.md  SSOT_USC.md
docs/legacy/: DESIGN_TOKENOMICS.md  TASK_YIELD_VAULT_FRONTEND.md  UPDATE_YIELD_VAULT_20260227.md
scripts/: extract-abi.sh  fix-dex-pools.ts  fix-vaults.ts  merge-addresses.ts  test-onchain.ts
snowball-app/: LEND_UI_REPORT.md  OP.md  PROMPT_FE_LEND.md  package.json  pnpm-workspace.yaml
snowball-dex/: OP.md  PROMPT_FE_DEX.md  README.md  package-lock.json  package.json  tailwind.config.ts
(+35 files in other folders)
